--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,28 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+
+    <!--顶部View线条共同样式-->
+    <style name="style_income_view_line">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:background">@color/color_FD2A5B</item>
+    </style>
+    <!--顶部TextView共同样式-->
+    <style name="style_income_text_view">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerInParent">true</item>
+        <item name="android:textColor">@color/color_333333</item>
+    </style>
+
+    <!--横向线条-->
+    <style name="LayoutHorizontalLine">
+        <item name="android:background">#EEEEEE</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+    </style>
 </resources>
